commit with zahra and lobby fixed